--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.19.4",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.16",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
+    "react-native-storage": "^1.0.1",
     "react-native-video": "^5.2.1"
   },
   "devDependencies": {
